# django-redis-metrics

./: .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  TODO.rst  pyproject.toml  requirements.in  requirements.txt  runtest.py  setup.py
.github/workflows/: setup-and-run-tests.yml
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  requirements.in  requirements.txt  usage.rst
docs/_build/doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
redis_metrics/: __init__.py  apps.py  forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
redis_metrics/management/commands/: delete_gauge.py  delete_metric.py  fix_redis_metrics_keys.py  generate_test_metrics.py  redis_metrics_send_mail.py  reset_weekly_metrics.py  system_metric.py
redis_metrics/templates/redis_metrics/: _aggregate_detail.html  _aggregate_history.html  _gauge.html  _metric_detail.html  _metric_history.html  _metric_list.html  _since.html  aggregate.html  aggregate_detail.html  aggregate_history.html  (+7 more)
redis_metrics/templatetags/: gauges.py  redis_metric_tags.py  redis_metrics_filters.py
redis_metrics/tests/: __init__.py  forms.py  models.py  settings.py  templatetags.py  test_forms.py  test_models.py  test_settings.py  test_templatetags.py  test_utils.py  test_views.py  urls.py  utils.py  views.py
requirements/: test.txt
(+11 files in other folders)
